fix: minor ci issue